--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ main ul {
 footer {
     /* Physical Placement */
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     padding: 2rem 2rem;
 
@@ -204,6 +204,14 @@ footer ul a:hover {
     text-decoration: underline;
 }
 
+.crisis-and-suicide-support,
+.mental-health-support,
+.addiction-and-substance-support,
+.behavioral-and-compulsive-support {
+    /* Physical Placement */
+    line-height: 1.5;
+}
+
 /* Mobile Styles */
 @media (max-width: 1000px) {
 
@@ -213,7 +221,7 @@ footer ul a:hover {
         padding: 2rem 2rem 0rem;
 
         /* Visual Effects */
-        font-size: 60%;
+        font-size: 80%;
     }
 
     header h1 {
@@ -229,7 +237,7 @@ footer ul a:hover {
         justify-content: center;
         align-items: center;
         padding: 1.5rem;
-        gap: .5rem;
+        gap: 1.5rem;
     }
 
     header nav a {
